<resources>
    <string name="app_name">Lista de Produtos</string>
    <string name="edit_text_nome_activity_formulario_produto">Nome</string>
    <string name="edit_text_descricao_activity_formulario_produto">Descrição</string>
    <string name="edit_text_valor_activity_formulario_produto">Valor</string>
    <string name="button_salvar_activity_formulario_produto">Salvar</string>
    <string name="imagem_do_produto">Imagem do Produto</string>
    <string name="imagem_activity_formulario_produto">Imagem formulario</string>
    <string name="action_button_adicionar">action_button_adicionar</string>
    <string name="carregar_formulario_imagem">Carregar</string>
    <string name="edit_text_formulario_imagem">URL da imagem</string>
</resources>