<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_formulario_produto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.activity.FormularioProdutoActivity">

        <ImageView
            android:id="@+id/image_view_activity_formulario_produto"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:contentDescription="@string/imagem_activity_formulario_produto"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:srcCompat="@drawable/imagem_padrao"
            app:srcCompat="@drawable/imagem_padrao" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_nome_activity_formulario_produto"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_activity_formulario_produto" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_nome_activity_formulario_produto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_nome_activity_formulario_produto" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_descricao_activity_formulario_produto"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_nome_activity_formulario_produto" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_descricao_activity_formulario_produto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_descricao_activity_formulario_produto" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_valor_activity_formulario_produto"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_descricao_activity_formulario_produto" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_valor_activity_formulario_produto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_valor_activity_formulario_produto"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/button_salvar_activity_formulario_produto"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/button_salvar_activity_formulario_produto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_valor_activity_formulario_produto"
            app:layout_constraintVertical_bias="1"
            android:layout_margin="16dp" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

